--- a/Backend/SmartSpender.DAL.BL/SmartSpender.DAL.BL.csproj
+++ b/Backend/SmartSpender.DAL.BL/SmartSpender.DAL.BL.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SmartSpender.Core\SmartSpender.Core.csproj" />
+    <ProjectReference Include="..\..\Shared\SmartSpender.Core\SmartSpender.Core.csproj" />
   </ItemGroup>
 
 </Project>
