--- a/Desktop/SmartSpender.UI/SmartSpender.UI.csproj
+++ b/Desktop/SmartSpender.UI/SmartSpender.UI.csproj
@@ -25,8 +25,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SmartSpender.DAL.BL\SmartSpender.DAL.BL.csproj" />
-    <ProjectReference Include="..\SmartSpender.Core\SmartSpender.Core.csproj" />
+    <ProjectReference Include="..\..\Backend\SmartSpender.DAL.BL\SmartSpender.DAL.BL.csproj" />
+    <ProjectReference Include="..\..\Shared\SmartSpender.Core\SmartSpender.Core.csproj" />
   </ItemGroup>
 
   <ItemGroup>
