move react folder to the frontend

--- a/Backend/SmartSpender.DAL.API/SmartSpender.DAL.API.csproj
+++ b/Backend/SmartSpender.DAL.API/SmartSpender.DAL.API.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Backend\SmartSpender.DAL.BL\SmartSpender.DAL.BL.csproj" />
+    <ProjectReference Include="..\SmartSpender.DAL.BL\SmartSpender.DAL.BL.csproj" />
   </ItemGroup>
 
 </Project>
